--- a/style.css
+++ b/style.css
@@ -1,131 +1,138 @@
 body {
-  background: #ee9ca7;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #ffdde1, #ee9ca7);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #ffdde1, #ee9ca7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #893062;
   font-family: arial;
-}
-
-h1 {
-  font-size: 32px;
-}
-
-h2, h3, h4 {
-  font-size: 28px;
-}
-
-/*img {
-  width: 300px;
-  height: 300px;
-  object-fit: cover;
-}*/
-
-/*h4, ul, ol {
-  text-align: left;
-}*/
-
-a, a:hover {
-  text-decoration: none;
-}
-
-p, ul, ol {
-  font-size: 20px;
-}
-
-.cadre {
-  background: #E2F3DC;
-  border: 3px solid #C1E6B6;
-  /*margin: 100px;*/
-  padding: 30px 70px;
-  border-radius: 5px;
-  box-shadow: 5px 5px 10px grey;
-}
-
-.margin-100px {
-  margin: 100px;
-}
-
-.margin-right-30px {
-  margin-right: 30px;
-}
-
-.avatar {
-  width: 300px;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 50%;
-  box-shadow: 5px 5px 10px grey;
-}
-
-.production {
-  width: 300px;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 3px;
-  box-shadow: 2px 2px 10px grey;
-  margin: 10px;
-}
-
-.text-center {
   text-align: center;
 }
+h1 {
+  color: #FFFFFF;
+  font-size: 62px;
+  background: #F3C2DE;
+  font-family: 'Pacifico', cursive;
+}
+h2 {
+  color: #FFFFFF;
+  "font-size: 38px">&#128540;
+  font-family: 'Lobster', cursive;
+ } 
+h3, h4, h5 {
+  color: #A45783;
+  font-size: 38px;
+  background: #F3C2DE;
+  font-family: 'Lobster', cursive;
+ } 
+h6 {
+  color: #A45783;
+  font-size: 38px;
+  background: #F3C2DE;
+  font-family: 'Lobster', cursive;
+ } 
 
-.text-left {
+ p, ul {
+  font-size: 20px;
+  color: #FFFFFF;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+}
+ul {
+  font-size: 20px;
+  color: #FFFFFF;
+ font-family: 'Montserrat', sans-serif;
   text-align: left;
+}  
+img {
+  width: 550px;
+  height: 400px;
+  object-fit: cover;
+
 }
 
-.color-green {
-  color: #458D2E;
+div {
+ background: #893062; 
+ 
 }
+footer {
+background: #893062; 
+font-size: 15px;
+color: #FFFFFF;
+font-family: 'Montserrat', sans-serif;
+text-align: center;
+  }
 
-.btn-pink {
-  display: inline-block;
-  margin: 15px;
-  border: 2px solid pink;
-  border-radius: 5px;
-  color: white;
-  background: #C86573;
-  box-shadow: 5px 5px 10px grey;
-  padding: 15px;
-  text-decoration: none;
+.fond-rose{
+  background: #893062;
+  border: 1px solid white;  
+  border-radius: 40px;
+  /*margin: 50px;*/
+  padding: 30px;
+  box-shadow: 1px 1px 5px white;
 }
-
-.btn-pink:hover {
-  background: pink;
-}
-
 .line-transparent {
-  background: grey;
-/*  height: 400px;*/
-  display: flex; /*dispose les enfants les uns à coté des autres*/
-  justify-content: space-around;
-  align-items: center;
-}
-
-.line-dark {
-  background: #9F3544;
-  height: 10px;
-  width: 50%;
-}
-
-.line-medium {
-  background: #EE9DA8;
-  height: 10px;
-  width: 30%;
-}
-
-.line-light {
-  background: #FBE4E7;
-  height: 10px;
-  width: 20%;
-}
-
-.display-flex {
+  background: #893062;
+  width: 100%;
   display: flex;
 }
 
+.line-light {
+  height: 25px;
+  width: 30%;
+  background: #CB73A5;
+}
 
+.line-medium {
+  height: 25px;
+  width: 30%;
+  background: #EB9CC9;
+}
 
+.line-hard {
+  height: 25px;
+  width: 40%;
+  background: #FFCDEA;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #893062;
+}
 
+.links {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 30px;
+  color: #FFFFFF;
+  font-family: 'Lobster', cursive;
+}
 
+.link {
+  margin: 10px 30px;
+  color: #FFFFFF;
+  font-family: 'Lobster', cursive;
+  justify-content: space-between;
+}
 
+.link:hover {
+  color: #FFFFFF;
+  font-family: 'Lobster', cursive;
+  justify-content: space-between;
+  }
+.banner {
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+}
 
+.banner h1 {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.banner p {
+  font-size: 20px;
+  color: white;
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
